--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <h1>Welcome to the AI poem generator</h1>
+
+    <footer>
+      This AI Generator was coded by Danielle Casa and is open-sourced on
+      <a href="https://github.com/DCClara/AI-poem-generator" target="_blank"
+        >Github</a
+      > and is hosted on <a href="aipoem-generator.netlify.app">Netlify</a>. 
+      
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
