changed poem to recipe

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap"
       rel="stylesheet"
     />
-    <title>AI Poem Generator</title>
+    <title>AI Recipe Generator</title>
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>AI Poem Generator</h1>
+        <h1>AI Recipe Generator</h1>
       </header>
 
       <main>
         <form>
           <input
             type="text"
-            placeholder="Enter a topic"
+            placeholder="What would you like to make?"
             autofocus
             required
             autocomplete="off"
@@ -31,22 +31,48 @@
           <input type="submit" class="submit-button" />
         </form>
         <div class="poem">
-          In icy stream's fierce rush, <br />
-          Polar bear, a fleeting hush, <br />
-          Silent grace, a dance untaught, <br />
-          In frigid depths, a fish, it's caught.
+          <h3>Béchamel Sauce</h3>
+          <ul>
+            <li>2 Tbsp. unsalted butter</li>
+            <li>2 Tbsp. all-purpose flour</li>
+            <li>1¼ cups whole milk, heated</li>
+            <li>Kosher salt and freshly ground black pepper</li>
+          </ul>
+          <h4>Step 1</h4>
+          <p>
+            Warm the milk on low heat until little bubbles form at the edges;
+            remove from heat.
+          </p>
+
+          <h4>Step 2</h4>
+          <p>
+            Melt 2 Tbsp. unsalted butter in a heavy-bottomed saucepan over
+            medium heat. Stir in 2 Tbsp. all-purpose flour and cook, stirring
+            constantly, until the paste cooks and bubbles a bit, but don't let
+            it brown, about 2 minutes. Slowly add 1¼ cups whole milk, heated,
+            whisking to incorporate. Bring it to a boil, stirring constantly, as
+            sauce thickens. Add kosher salt and freshly ground black pepper to
+            taste. Reduce to low heat, and cook, stirring, 2–3 minutes more.
+            Remove from the heat.
+          </p>
+
+          <p>
+            Do ahead: To cool this sauce for later use, cover it with wax paper
+            or pour a layer of milk over it to prevent a skin from forming.
+            Refrigerate for up to 3 days.
+          </p>
         </div>
       </main>
-
-      <footer>
-        This AI Generator was coded by Danielle Casa and is open-sourced on
-        <a href="https://github.com/DCClara/AI-poem-generator" target="_blank"
-          >Github</a
-        >
-        and is hosted on
-        <a href="https://aipoem-generator.netlify.app/">Netlify</a>.
-      </footer>
     </div>
+    <footer>
+      This AI Generator was coded by Danielle Casa and is open-sourced on
+      <a href="https://github.com/DCClara/AI-poem-generator" target="_blank"
+        >Github</a
+      >
+      and is hosted on
+      <a href="https://aipoem-generator.netlify.app/">Netlify</a>.
+    </footer>
+
     <script src="src/index.js"></script>
   </body>
 </html>
