added basic form handling and added typewriter

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/styles.css" />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,7 +20,7 @@
       </header>
 
       <main>
-        <form>
+        <form id="recipe-generator-form">
           <input
             type="text"
             placeholder="What would you like to make?"
@@ -30,38 +31,7 @@
           />
           <input type="submit" class="submit-button" />
         </form>
-        <div class="poem">
-          <h3>Béchamel Sauce</h3>
-          <ul>
-            <li>2 Tbsp. unsalted butter</li>
-            <li>2 Tbsp. all-purpose flour</li>
-            <li>1¼ cups whole milk, heated</li>
-            <li>Kosher salt and freshly ground black pepper</li>
-          </ul>
-          <h4>Step 1</h4>
-          <p>
-            Warm the milk on low heat until little bubbles form at the edges;
-            remove from heat.
-          </p>
-
-          <h4>Step 2</h4>
-          <p>
-            Melt 2 Tbsp. unsalted butter in a heavy-bottomed saucepan over
-            medium heat. Stir in 2 Tbsp. all-purpose flour and cook, stirring
-            constantly, until the paste cooks and bubbles a bit, but don't let
-            it brown, about 2 minutes. Slowly add 1¼ cups whole milk, heated,
-            whisking to incorporate. Bring it to a boil, stirring constantly, as
-            sauce thickens. Add kosher salt and freshly ground black pepper to
-            taste. Reduce to low heat, and cook, stirring, 2–3 minutes more.
-            Remove from the heat.
-          </p>
-
-          <p>
-            Do ahead: To cool this sauce for later use, cover it with wax paper
-            or pour a layer of milk over it to prevent a skin from forming.
-            Refrigerate for up to 3 days.
-          </p>
-        </div>
+        <div class="recipe" id="recipe"></div>
       </main>
     </div>
     <footer>
