--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <form id="recipe-generator-form">
             <input
               type="text"
-              placeholder="Type some ingredients"
+              placeholder="Enter ingredients or a dish of your choice"
               autofocus
               required
               autocomplete="off"
